update contrast curves and paper

--- a/paper/report.bib
+++ b/paper/report.bib
@@ -370,6 +370,22 @@
   file = {/Users/mileslucas/Zotero/storage/URAUICZS/Traub_Oppenheimer_2010_Direct Imaging of Exoplanets.pdf}
 }
 
+@article{trujillo2001,
+  title = {The Effects of Seeing on {{S\'ersic}} Profiles - {{II}}. {{The Moffat PSF}}},
+  author = {Trujillo, I. and Aguerri, J. A. L. and Cepa, J. and Guti{\'e}rrez, C. M.},
+  year = {2001},
+  month = dec,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {328},
+  pages = {977--985},
+  issn = {0035-8711},
+  doi = {10.1046/j.1365-8711.2001.04937.x},
+  abstract = {The effects of seeing on S\'ersic r1/n profile parameters are extensively studied using a Moffat function. This analytical approximation to the point spread function (PSF) is shown to provide the best fit to the PSF predicted from atmospheric turbulence theory when {$\beta\sptilde$}4.765. The Moffat PSF is additionally shown to contain the Gaussian PSF as a limiting case ({$\beta$}-{$>\infty$}). The Moffat function is also shown to be numerically well behaved when modelling narrow PSFs in HST images. Seeing effects are computed for elliptically symmetric surface brightness distributions. The widely used assumption of circular symmetry when studying the effects of seeing on intrinsically elliptical sources is shown to produce significant discrepancies with respect to the true effects of seeing on these sources. A prescription to correct raw (observed) central intensities, effective radii, index n and mean effective surface brightness is given.},
+  keywords = {Astrophysics,ATMOSPHERIC EFFECTS,GALAXIES: DISTANCES AND REDSHIFTS,GALAXIES: PHOTOMETRY,METHODS: DATA ANALYSIS},
+  annotation = {ADS Bibcode: 2001MNRAS.328..977T},
+  file = {/Users/mileslucas/Zotero/storage/55QATNPA/Trujillo et al. - 2001 - The effects of seeing on Sérsic profiles - II. The.pdf}
+}
+
 @article{uyama2020,
   title = {High-Contrast {{H$\alpha$}} Imaging with {{Subaru}}/{{SCExAO}} + {{VAMPIRES}}},
   author = {Uyama, Taichi and Norris, Barnaby and Jovanovic, Nemanja and Lozi, Julien and Tuthill, Peter and Guyon, Olivier and Kudo, Tomoyuki and Hashimoto, Jun and Tamura, Motohide and Martinache, Frantz},
