--- a/paper/report.tex
+++ b/paper/report.tex
@@ -10,9 +10,8 @@
 \usepackage{graphicx}
 \usepackage[caption = false]{subfig}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
-\usepackage{mwe}
-\usepackage{todonotes}
 \usepackage{siunitx}
+\usepackage{multirow}
 
 \DeclareSIUnit\milliarcsecond{mas}
 
@@ -52,8 +51,9 @@
 
 \section{Introduction}\label{sec:intro}
 
+In recent decades exoplanet science has advanced tremendously, with over \num{5,000} confirmed planets orbiting a variety of stars in our galaxy\cite{akeson2013}. These planets have predominantly been discovered and characterized using the indirect methods of transit photometry or radial velocity analysis\cite{perryman2018}. High-contrast imaging, or direct imaging, probes a complenetary phase space of exoplanet size and masses to these indirect methods, and is the only way to directly observe exoplanet spectra and orbits. In order to accomplish the difficult task of imagina a planet around another star, a combination of high-performance instrumentation, observational techniques, and post-processing methods must be employed.
 
-In recent decades exoplanet science has advanced tremendously, with over \num{5,000} confirmed planets orbiting a variety of stars in our galaxy\cite{akeson2013}. These planets have predominantly been discovered and characterized using the indirect methods of transit photometry or radial velocity analysis\cite{perryman2018}. Direct imaging, or high-contrast imaging, probes a complenetary phase space of exoplanets while providing direct observations of exoplanets. In order to accomplish this, a combination of high-performance instrumentation, observational techniques, and post-processing methods must be employed. In the past few years, high-contrast instruments like SPHERE\cite{petit2014}, GPI\cite{macintosh2014}, and SCExAO\cite{jovanovic2015a} have greatly advanced the field of direct imaging. These instruments typically operate in the near-infrared (near-IR), from Y to L band, for two reasons. First is for the increased brightness of thermal emission of exoplanets in the near-IR, which lowers the relative flux ratio between the star and the exoplanet (contrast), ultimately improving the detection sensitivity to smaller planets. Second, in the near-IR wavefront control with adaptive optics (AO) is more powerful than the optical. This is because  the same path length error is a smaller phase error in the near-IR than the visible, simply due to the wavelength difference.
+In the past few years, high-contrast instruments like SPHERE\cite{petit2014}, GPI\cite{macintosh2014}, and SCExAO\cite{jovanovic2015a} have greatly advanced the field of direct imaging. These instruments typically operate in the near-infrared (near-IR), from Y to L band, for two reasons. First is for the increased brightness of thermal emission of exoplanets in the near-IR, which lowers the relative flux ratio between the star and the exoplanet (contrast), ultimately improving the detection sensitivity to smaller planets. Second, in the near-IR wavefront control with adaptive optics (AO) is more powerful than the optical. This is because  the same path length error is a smaller phase error in the near-IR than the visible, simply due to the wavelength difference.
 
 Despite the challenges of high-performance, diffraction limited imaging in the visible, there are significant motivations for extending high-contrast imaging into the optical. First, consider the detection of reflected-light from exoplanets, which is considered the most promising method of imaging terrestrial planets\cite{traub2010}. Second, an important component of improving planet-formation theory is studying the birth of exoplanets in protoplanetary disks, which can be imaged using light reflected from small dust grains suspended in the gas disk. Such observations of protoplanetary disks are very complementary to the radio imaging of the debris, and probe smaller angles, better angular resolutions, and different grain chemistries than near-IR reflected light imaging. Lastly, using H$\alpha$ emission (\qty{656.28}{\nano\meter}) as a tracer for accretion allows direct imaging of matter accreting onto forming exoplanets\cite{currie2022}, as well as studying mass-loss in giant stars\cite{norris2020}.
 
@@ -115,19 +115,19 @@ Both the focal plane masks and Lyot stop are installed in mounts with precise mo
 
 \subsection{Artifical Calibration Speckles (``Astrogrid'')}
 
-A common problem with coronagraphic imaging is accurately determing the flux and position of the host star while behind the focal plane mask. By adding sinusoidal patterns to the deformable mirror (DM) copies of the stellar PSF will appear off-axis depending on the frequency of the sinusoidal pattern\cite{sahoo2020}. These patterns are modulated in two ways: first the patterns are modulated spatially by half a wavelength to average effects of atmospheric seeing on the speckles during a typical integration. Second, the pattern is spatially modulated to create alternating sets of two PSFs, for a total of four calibration speckles equidistant from the star. The brightness of these ``satellite spots'' is proportional to the amplitude of the DM perturbation, which can be calibrated to give accurate relative photometry between the spots and the star. This method has been successfully demonstrated on SCExAO/CHARIS with astrometric precision $\sim$\qty{1.7}{\milliarcsecond} and photometric precision $\sim$0.3\%\cite{currie2020}. Examples of the ``astrogrid'' on VAMPIRES are shown in \autoref{fig:satellite-spots}.
+A common problem with coronagraphic imaging is accurately determing the flux and position of the host star while behind the focal plane mask. Even though the focal plane masks in our coronagraph are transmissive, there is not enough signal to precisely measure the photometry or astrometry of the star. Rather, this transmission helps with initial alignment when the Lyot stop is removed allowing a much higher S/N through the mask. Instead, we utilize a technique which creates artifical PSFs throughout the FOV with known photometry and astrometry. This technique, called ``astrogrid``\cite{sahoo2020}, creates ``satellite spots`` by adding sinusoidal patterns to the deformable mirror (DM). These sinusoids are like adding tip and tilt to the DM, where the amplitude of the pattern defines the relative brightness of the satellite spots. The sinusoid pattern is modulated in time to cancel out any atmospheric speckles and are applied in a cross pattern (\autoref{fig:satellite-spots}). The astrogrid method has been successfully demonstrated on SCExAO/CHARIS with astrometric precision $\sim$\qty{1.7}{\milliarcsecond} and photometric precision $\sim$0.3\%\cite{currie2020}.
 
 \begin{figure*}
    \centering
    \includegraphics[width=\textwidth]{figures/astrogrid_psf}
-   \caption{Coronagraphic images using the CLC-5 mask (\qty{91}{\milliarcsecond} IWA) with \qty{50}{\nano\meter} ``astrogrid'' calibration speckles. (a) A single frame of testbed data using the internal calibration source through the 750-50 filter with 110 EM gain, and \qty{20}{\milli\second} exposure length. (b) On-sky data of HIP 56083 from May 25, 2022 in poor seeing ($\sim$\ang{;;1.6}), using the 750-50 filter, 300 EM gain, and \qty{200}{\milli\second} exposure length.}\label{fig:satellite-spots}
+   \caption{Coronagraphic images using the CLC-5 mask (\qty{92}{\milliarcsecond} IWA) with \qty{50}{\nano\meter} ``astrogrid'' calibration speckles. (a) A single frame of testbed data using the internal calibration source through the 750-50 filter with 110 EM gain, and \qty{20}{\milli\second} exposure length. (b) On-sky data of HIP 56083 from May 25, 2022 in poor seeing ($\sim$\ang{;;1.6}), using the 750-50 filter, 300 EM gain, and \qty{200}{\milli\second} exposure length.}\label{fig:satellite-spots}
 \end{figure*}
 
 \subsection{Coronagraphic throughput}
 
-We measured both the relative Lyot stop throughput as well as the off-axis focal plane throughput for our coronagraph. The Lyot stop throughput is proportional to the unobstructed area of the mask compared to the pupil. From the drawings, the ratio of areas is 63.7\%. We measured the throughput using the pupil-imaging camera with the calibration light source, comparing the total intensity measured with a mirror in the pupil wheel (100\% of the incident light) versus the Lyot stop (blocked light only). We calculated a relative throughput of 65.7\%.
+We measured both the relative Lyot stop throughput as well as the off-axis focal plane throughput for our coronagraph. The Lyot stop throughput is proportional to the unobstructed area of the mask compared to the pupil. From our CAD models we estimated the throughput as 63.7\% using the ratio of unobstructed areas between the Lyot stop and the SCExAO pupil. We measured the throughput using the pupil-imaging camera with the calibration light source, comparing the total intensity measured with a mirror in the pupil wheel (100\% of the incident light) versus the Lyot stop (blocked light only). We calculated a relative throughput of 65.7\%.
 
-The off-axis coronagraphic throughput was measured by gradually moving the focal plane mask off-axis from the calibration source. The fluxes from all of the images were normalized so the maximum off-axis flux was 1 and the on-axis flux was 0 (\autoref{fig:throughput}). The inner working angle (IWA) is defined at 50\% throughput. The IWAs for each mask were interpolated from the data as \qtylist{36;55;92;129}{\milliarcsecond}, respectively, which is in good agreement with the radii of the masks.
+The off-axis coronagraphic throughput was measured by gradually moving the focal plane mask off-axis from the calibration source. The fluxes from all of the images were normalized so the maximum off-axis flux was 1 and the on-axis flux was 0 (\autoref{fig:throughput}). The inner working angle (IWA) is defined at 50\% throughput which was interpolated from each curve as \qtylist{36;55;92;129}{\milliarcsecond}, respectively. These IWAs are in good agreement with the radii of the masks, as shown in \autoref{tab:coronagraph}.
 
 
 \begin{figure*}
@@ -136,30 +136,50 @@ The off-axis coronagraphic throughput was measured by gradually moving the focal
    \caption{Off-axis coronagraphic throughput for each focal plane mask. The flux throughput is normalized between 0 and 1. 50\% throughput is marked with a black dashed line and the inner working angles are denoted by the orange to purple dotted lines.}\label{fig:throughput}
 \end{figure*}
 
+\begin{table}
+   \centering
+   \caption{Coronagraph parameters for all four focal plane masks.}\label{tab:coronagraph}
+   \begin{tabular}{ccccc}
+      \hline
+      \multirow{2}{*}{Name} & \multicolumn{2}{c}{Mask radius} & IWA &\multirow{2}{*}{Lyot throughput} \\
+      & (\unit{\micro\meter}) & (\unit{\milliarcsecond}) & (\unit{\milliarcsecond}) & \\
+      \hline\hline
+      CLC-2 & 38.6 & 35.9 & 36 & 65.7\% \\
+      CLC-3 & 57.9 & 53.9 & 55 & 65.7\% \\
+      CLC-5 & 96.5 & 89.8 & 92 & 65.7\% \\
+      CLC-7 & 135 & 126 & 129 & 65.7\% \\
+      \hline
+   \end{tabular}
+\end{table}
+
+
 \section{Results}\label{sec:results}
 
 \subsection{Testbed results}\label{sec:testbed}
 
-Our first tests use the calibration source on SCExAO for determining the contrast of the coronagraph for each focal plane mask. For these tests we used the 750-50 filter since it has the highest throughput. In addition, for all tests we applied an astrogrid with \qty{50}{\nano\meter} amplitude and a spatial frequency of 15.5 $\lambda/D$ (\qty{308}{\milliarcsecond}).
+Our first tests use the calibration source on SCExAO for determining the contrast of the coronagraph for each focal plane mask. For these tests we used the 750-50 filter with the astrogrid set to \qty{50}{\nano\meter} amplitude and a spatial frequency of 15.5 $\lambda/D$ (\qty{308}{\milliarcsecond}).
 
-First, we took non-coronagraphic data allowing us to characterize both the photometry and astrometry of the astrogrid speckles as well as giving a non-coroangraphic PSF for measuring the relative attenuation of the coronagraph. For data reduction, we median-combined a series of 100 images and recentered the frame using the satellite spot centers of mass. For the astrogrid calibration, we used a hierarchical model of five two-dimensional Moffat functions
+First, we took non-coronagraphic data allowing us to characterize the photometry and astrometry of the astrogrid speckles. For data reduction, we median-combined a series of 100 images and recentered the frame using the satellite spot centers of mass. For the astrogrid calibration, we used a hierarchical model of five two-dimensional Moffat functions
 \begin{equation}
    \label{eqn:moffat}
    f\left( x, y | x_0, y_0, \Gamma, \alpha, I_0\right) = I_0 \left[1 + \frac{\left(x-x_0\right)^2 + \left(y-y_0\right)^2}{\Gamma^2} \right]^{-\alpha}
 \end{equation}
-where $(x_0, y_0)$ is the center of the PSF, $I_0$ is the peak amplitude, $\Gamma$ is the half-width at half-maximum (HWHM), and $\alpha$ is the exponential scaling factor, typically around 1 to 3. In our hierarchical model each PSF shares the $\Gamma$ and $\alpha$ parameters, and each of the four satellite spots share an amplitude. Around each PSF we measured the photometry using circular apertures with background subtraction from annular apertures. We measured the relative photometry of the \qty{50}{\nano\meter} amplitude astrogrid as $10^{-1.52}$.
+where $(x_0, y_0)$ is the center of the PSF, $I_0$ is the peak amplitude, $\Gamma$ is the half-width at half-maximum (HWHM), and $\alpha$ is the exponential scaling factor, typically around 3 to 5. We chose a Moffat PSF because it is well-fitted to seeing-limited images\cite{trujillo2001}. In our hierarchical model each PSF shares the $\Gamma$ and $\alpha$ parameters, and each of the four satellite spots share an amplitude. Around each PSF we measured the photometry using circular apertures with background subtraction from annular apertures. We measured the relative photometry of the \qty{50}{\nano\meter} amplitude astrogrid as $10^{-1.52}$.
 
-Then we inserted the focal plane mask and Lyot stop and refocused. Again, we median-combined a series of 100 images and recentered using the satellite spots. To measure the photometry we fit a hierarchical model of four two-dimensional Moffat functions (\autoref{eqn:moffat}). This follows the same procedure as above with shared shape parameters and intensities, but this time without the on-axis PSF. Then, we measured the photometry of each satellite spot using circular apertures with an annulus for background subtraction. The stellar flux is estimated by the median flux of the four satellite spots scaled by the relative photometry fit above ($10^{-1.52}$).
+Then we inserted the focal plane mask and Lyot stop and refocused. For these images, we adjusted the brightness of our source with ND filters such that the satellite spots were just within the linear range of the detector ($\sim2^15$). Our exposure time was \qty{20}{\milli\second} and our EM gain was 0. We median-combined a series of 100 images and recentered using the satellite spots. To measure the photometry we fit a hierarchical model of four two-dimensional Moffat functions (\autoref{eqn:moffat}). This follows the same procedure as above with shared shape parameters and intensities, but this time without the on-axis PSF. Then, we measured the photometry of each satellite spot using circular apertures with an annulus for background subtraction. The stellar flux is estimated by the median flux of the four satellite spots scaled by the relative photometry fit above ($10^{-1.52}$).
 
-From here we create raw contrast curves the same way as in \autoref{sec:design}, calculating the 5$\sigma$ detection limits (accounting for small-sample statistics) without PSF subtraction. Because we are not performing any kind of differential imaging, the satellite spots heavily bias the contrast, so we masked out the satellite spots during the noise calculations.
+Lastly, we removed the focal plane mask and Lyot stop without adjusting the source brightness or exposure settings. It is critical that we used 0 EM gain because our detectors saturated heavily without the coronagraph. We took another set of 100 frames, median-combined them, and centered using the satellite spots. All saturated pixels were masked before calculating the contrast, which was normalized using the source flux measured in the coronagraph images, because the satellite spots were partially saturated in these frames.
 
-From the raw contrast curves (\autoref{fig:contrast}), we note similar performance between all the mask sizes. At \ang{;;0.1}, the coronagraph achieves a raw contrast of $\sim$ \num{e-3}, and a read-noise limited contrast beyond \ang{;;0.8} of $\sim$\num{e-5}. There is a large bump around the location of the satellite spots ($\sim$\ang{;;0.3}) and, to a lesser extent, around the secondary spots ($\sqrt{2}\cdot r \sim$ \ang{;;0.42}). Even with the masking, these spots are biased, we believe due to speckle pinning\cite{bloemhof2004}. We note that throughout the entire FOV the coronagraphs consistently attenuate the light by 1 to 1.5 orders of magnitude, addressing the dynamic range problems currently faced by VAMPIRES.
+From here we create raw contrast curves the same way as in \autoref{sec:design}, calculating the 5$\sigma$ detection limits in concentric annuli one FWHM wide (accounting for small-sample statistics\cite{mawet2014}) without PSF subtraction. Because we are not performing any kind of differential imaging, the satellite spots heavily bias the contrast, so we mask them out during the noise calculations. We also calculated the background noise from our dark frames and converted it to contrast, which was $\sim$\num{3e-6} (5$\sigma$).
 
+From the raw contrast curves (\autoref{fig:contrast}), we note similar performance between all the mask sizes. At \ang{;;0.1}, the coronagraph achieves a raw contrast of $\sim$ \num{e-3}, and background-limited contrast beyond $\sim$\ang{;;1} of $\sim$\num{e-5}. Throughout the entire FOV the coronagraphs attenuate the light by \numrange{0.2}{1} orders of magnitude, although the diffraction control falls off beyond \ang{;;1}.
+
+These bench contrast curves represent an unrealistic, ideal observing scenario. In particular, we let the detector saturate in order to take unocculted data with the same exposure settings we used with the coronagraph. This is not typical for on-sky observations, and cannot be done at all with EM gain, sacrificing the benefits of the EM process. For high S/N observations with the coronagraph, the limiting brightness will be the satellite spots. So, for example, with \qty{50}{\nano\meter} astrogrid we improve our background-limited contrast by $10^{1.52}$ compared to the same data taken without the coronagraph with exposure setting adjusted to avoid saturation. Without using the astrogrid, the long-exposure limit will be reached when the speckle halo saturates, which offers $\sim$\num{e2} improved contrast, which means VAMPIRES can observe targets $\sim$100 times breater than its current limits.
 
 \begin{figure*}
    \centering
-   \includegraphics[width=0.9\textwidth]{figures/bench_20220526_curves}
-   \caption{Raw 5$\sigma$ contrast curves measured from \qty{2}{\second} of testbed data. These curves account for small-sample statistics and have no PSF subtraction. The black curve is the non-coronagraphic contrast, while the orange through purple curves correspond to each focal plane mask. The IWA for each curve is marked with a dotted vertical line. The astrogrid speckles are masked out during the calculation, but their position is marked with a gray vertical line.}\label{fig:contrast}
+   \includegraphics[width=0.9\textwidth]{figures/saturated_bench_20220628_curves}
+   \caption{Raw 5$\sigma$ contrast curves measured from \qty{2}{\second} of testbed data. These curves account for small-sample statistics and have no PSF subtraction. The black curve is the non-coronagraphic contrast measured from a saturated PSF (which has been masked out), while the orange through purple curves correspond to each focal plane mask. The IWA for each curve is marked with a dotted vertical line. The astrogrid speckles are also masked out.}\label{fig:contrast}
 \end{figure*}
 
 \subsection{On-sky results}\label{sec:onsky}
@@ -176,9 +196,9 @@ We constructed 5$\sigma$ contrast curves for each focal plane mask size followin
 
 \section{Conclusions}\label{sec:conclusions}
 
-In this paper we have described the design, construction, and deployment of a visible-light Lyot coronagraph on SCExAO/VAMPIRES. This coronagraph attenuates 1 to 1.5 orders of magnitude of light, greatly improving the dynamic range of the EM-CCDs used on VAMPIRES with max EM gain. Additionally, the diffraction control will improve high-contrast performance which has important applications in the optical for exoplanet science, both companion and protoplanetary disk imaging, as well as H$\alpha$ imaging. The coronagraph was approved for open-use observation starting in the 2022B observing semester.
+In this paper we have described the design, construction, and deployment of a visible-light Lyot coronagraph on SCExAO/VAMPIRES. This coronagraph attenuates $\sim$2 orders of magnitude of light, greatly improving the dynamic range of the EM-CCDs used on VAMPIRES with max EM gain. Additionally, the diffraction control will improve high-contrast performance, which has important applications in the optical for exoplanet science, both companion and protoplanetary disk imaging, as well as H$\alpha$ imaging. The coronagraph was approved for open-use observation starting in the 2022B observing semester.
 
-Four partially transmissive focal plane masks were installed with IWAs of \qtylist{36;55;92;129}{\milliarcsecond}, respectively. The Lyot stop has a measured throughput of 65.7\%. During operation, the coronagraph uses ``astrogrid'' artifical speckles for photometric and astrometric calibration. We tested the coronagraph using the SCExAO internal source for characterizing the IWA, Lyot stop throughput, satellite spot relative flux, and measured contrast curves for each mask size using \qty{2}{\second} of median-combined data. The contrast was similar for each mask size, spanning \num{e-3} to \num{e-5} from \ang{;;0.1} to $>$\ang{;;0.8}. We also measured the contrast for each mask size using \qty{20}{\second} of median-combined data of HIP 56083 in poor seeing conditions. This data is highly limited by the seeing halo, but achieves raw 5$\sigma$ contrast of \num{e-2} to \num{e-4} from \ang{;;0.1} to \ang{;;0.75}.
+Four partially transmissive focal plane masks were installed with IWAs of \qtylist{36;55;92;129}{\milliarcsecond}, respectively. The Lyot stop has a measured throughput of 65.7\%. During operation, the coronagraph uses ``astrogrid'' artifical speckles for photometric and astrometric calibration. We tested the coronagraph using the SCExAO internal source for characterizing the IWA, Lyot stop throughput, satellite spot relative flux, and measured contrast curves for each mask size using \qty{2}{\second} of median-combined data. The contrast was similar for each mask size, spanning \num{e-3} to \num{e-5} from \ang{;;0.1} to $>$\ang{;;0.8}, offering 0.2 to 1 orders of magnitude improvement over saturated non-coronagraphic images. We found the background limit for our detectors was $\sim$\num{3e-6} (5$\sigma$). We also measured the contrast for each mask size using \qty{20}{\second} of median-combined data of HIP 56083 in poor seeing conditions. This data is highly limited by the seeing halo, but achieves raw 5$\sigma$ contrast of \num{e-2} to \num{e-4} from \ang{;;0.1} to \ang{;;0.75}.
 
 In the future, as wavefront control improves for SCExAO, we want to explore phase-based focal plane masks such as the four-quadrant phase mask (4QPM)\cite{rouanFourQuadrantPhase2007}. Phase-based masks offer improved contrast over amplitude-based designs like the classic Lyot style, but are highly sensitive to pointing errors and thus require fine tip-tilt control for effective use\cite{huby2017}. The fine tip-tilt control is expected to improve on SCExAO during the upgrades to the facility AO system, AO 188. We are also interested in exploring apodized Lyot stops to achieve similar or improved performance in the presence of aberrations without sacrificing as much throughput.
 
