--- a/paper/report.bib
+++ b/paper/report.bib
@@ -255,6 +255,19 @@
   file = {/Users/mileslucas/Zotero/storage/BJG97C58/Mawet et al. - 2014 - Fundamental limitations of high contrast imaging s.pdf}
 }
 
+@article{minowa2010,
+  title = {Performance of {{Subaru}} Adaptive Optics System {{AO188}}},
+  author = {Minowa, Yosuke and Hayano, Yutaka and Oya, Shin and Watanabe, Makoto and Hattori, Masayuki and Guyon, Olivier and Egner, Sebastian and Saito, Yoshihiko and Ito, Meguro and Takami, Hideki and Garrel, Vincent and Colley, Stephen and Golota, Taras and Iye, Masanori},
+  year = {2010},
+  month = jul,
+  volume = {7736},
+  pages = {77363N},
+  doi = {10.1117/12.857818},
+  abstract = {Subaru adaptive optics system (AO188) is an 188-elements curvature sensor adaptive optics system that is operated in both natural and laser guide star modes. AO188 was installed at Nasmyth platform of the Subaru telescope and it has been successfully operating in the natural guide star mode since October 2008. The performance of AO188 in the natural guide star mode has been well verified from on-sky data obtained with the infrared camera and spectrograph (IRCS). Under normal seeing condition, AO188 achieves K-band Strehl ratio between 60\% and 70\% using R = 9.0 magnitude natural guide stars and it works well with faint guide stars down to R = 16.5 magnitude. We measured the FWHM and Strehl ratio of stellar images in globular clusters and found that the isoplanatic angle is approximately 30 arcsec. In this paper, we describe an overview of the operation procedure for AO188, as well as its performance such as angular resolution, Strehl ration, and sensitivity gain for detecting faint objects.},
+  annotation = {ADS Bibcode: 2010SPIE.7736E..3NM},
+  file = {/Users/mileslucas/Zotero/storage/PDUF9L3D/Minowa et al. - 2010 - Performance of Subaru adaptive optics system AO188.pdf}
+}
+
 @article{norris2015,
   title = {The {{VAMPIRES}} Instrument: Imaging the Innermost Regions of Protoplanetary Discs with Polarimetric Interferometry},
   shorttitle = {The {{VAMPIRES}} Instrument},
