--- a/paper/report.tex
+++ b/paper/report.tex
@@ -212,7 +212,7 @@ In the future, as wavefront control improves for SCExAO, we want to explore phas
 
 \section{Code and Data Availability}\label{sec:code}
 
-The code used for simulating the coronagraph (\autoref{sec:design}), reducing and analyzing testbed (\autoref{sec:testbed}) and on-sky data (\autoref{sec:onsky}), and for producing the figures in this paper are all available under an open-source license in a GitHub repository (\href{https://github.com/mileslucas/vampires-coronagraph}{mileslucas/vampires-coronagraph}). This code makes significant use of the Julia programming language\cite{bezanson2017} along with the open-source packages \texttt{HCIPy}\cite{por2018}, \texttt{ADI.jl}\cite{lucas2020}, \texttt{numpy}\cite{harris2020}, and \texttt{astropy}\cite{astropycollaboration2013,astropycollaboration2018}. The CAD drawings for the focal plane masks and Lyot stops are also available in the online repository. Data is openly available upon request to accomadate the large data volumes. Further requests or questions about code or data are welcomed.
+The code used for simulating the coronagraph (\autoref{sec:design}), reducing and analyzing testbed (\autoref{sec:testbed}) and on-sky data (\autoref{sec:onsky}), and for producing the figures in this paper are all available under an open-source license in a GitHub repository (\href{https://github.com/mileslucas/vampires-coronagraph}{mileslucas/vampires-coronagraph}). This code makes significant use of the Julia programming language\cite{bezanson2017} along with the open-source packages \texttt{HCIPy}\cite{por2018}, \texttt{ADI.jl}\cite{lucas2020}, \texttt{numpy}\cite{harris2020}, and \texttt{astropy}\cite{astropycollaboration2013,astropycollaboration2018}. The CAD drawings for the focal plane masks and Lyot stops are also available in the online repository. Data is openly available upon request to accommodate the large data volumes. Further requests or questions about code or data are welcomed.
 
 \acknowledgments
 
