--- a/paper/report.tex
+++ b/paper/report.tex
@@ -112,11 +112,11 @@ The Lyot stop pattern was deposited onto a \qty{25}{\milli\meter} AR-coated opti
 
 \section{Operation and Characterization}\label{sec:tests}
 
-Both the focal plane masks and Lyot stop are installed in mounts with precise motor controllers for alignment. We found that the Lyot stop, being in the collimated beam, stays consistently aligned in-between instrument cranings. The focal plane masks take around a minute to manually align and focus.
+Both the focal plane masks and Lyot stop are installed in mounts with precise motor controllers for alignment. The Lyot stop is aligned using the reflected light in a pupil alignment camera on VAMPIRES. We found that the Lyot stop stays consistently aligned in-between instrument cranings, meaning that no adjustments were necessary for months. The focal plane masks take around a minute to manually align and focus, and always need realigned for each target.
 
-\subsection{Artifical Calibration Speckles (``Astrogrid'')}
+\subsection{Artificial Calibration Speckles (``Astrogrid'')}
 
-A common problem with coronagraphic imaging is accurately determining the flux and position of the host star while behind the focal plane mask. Even though the focal plane masks in our coronagraph are transmissive, there is not enough signal to precisely measure the photometry or astrometry of the star. Rather, this transmission helps with initial alignment when the Lyot stop is removed allowing a much higher S/N through the mask. Instead, we utilize a technique which creates artifical PSFs throughout the FOV with known photometry and astrometry. This technique, called ``astrogrid''\cite{sahoo2020}, creates ``satellite spots'' by adding sinusoidal patterns to the deformable mirror (DM). These sinusoids create two opposing copies of the PSF, where the sinusoid frequency defines the separation and the amplitude defines the relative brightness. The sinusoid phase is modulated in time to remove coherence between the astrogrid and the underlying speckles and are applied in a cross pattern (\autoref{fig:satellite-spots}). The astrogrid method has been successfully demonstrated on SCExAO/CHARIS with astrometric precision $\sim$\qty{1.7}{\milliarcsecond} and photometric precision $\sim$0.3\%\cite{currie2020}.
+A common problem with coronagraphic imaging is accurately determining the flux and position of the host star while behind the focal plane mask. Even though the focal plane masks in our coronagraph are transmissive, there is not enough signal to precisely measure the photometry or astrometry of the star. Rather, this transmission helps with initial alignment when the Lyot stop is removed allowing a much higher S/N through the mask. Instead, we utilize a technique which creates artificial PSFs throughout the FOV with known photometry and astrometry. This technique, called ``astrogrid''\cite{sahoo2020}, creates ``satellite spots'' by adding sinusoidal patterns to the deformable mirror (DM). These sinusoids create two opposing copies of the PSF, where the sinusoid frequency defines the separation and the amplitude defines the relative brightness. The sinusoid phase is modulated in time to remove coherence between the astrogrid and the underlying speckles and are applied in a cross pattern (\autoref{fig:satellite-spots}). The astrogrid method has been successfully demonstrated on SCExAO/CHARIS with astrometric precision $\sim$\qty{1.7}{\milliarcsecond} and photometric precision $\sim$0.3\%\cite{currie2020}.
 
 \begin{figure*}
    \centering
