update author list

--- a/paper/report.tex
+++ b/paper/report.tex
@@ -27,6 +27,10 @@
 \author[b,c]{Olivier Guyon}
 \author[b]{Julien Lozi}
 \author[d]{Barnaby Norris}
+\author[b]{Vincent Deo}
+\author[b]{S\'ebastien Vievard}
+\author[b]{Kyohoon Ahn}
+\author[b]{Nour Skaf}
 \author[d]{Peter Tuthill}
 \affil[a]{Institute for Astronomy, University of Hawai'i,  640 N. Aohoku Pl., Hilo, HI 96720, USA}
 \affil[b]{National Observatory of Japan, Subaru Telescope, 650 N. Aohoku Pl., Hilo, HI 96720, USA}
