--- a/paper/report.tex
+++ b/paper/report.tex
@@ -24,18 +24,21 @@
 
 \author[a,*]{Miles Lucas}
 \author[a]{Michael Bottom}
-\author[b,c]{Olivier Guyon}
+\author[b,c,d]{Olivier Guyon}
 \author[b]{Julien Lozi}
-\author[d]{Barnaby Norris}
+\author[e]{Barnaby Norris}
 \author[b]{Vincent Deo}
 \author[b]{S\'ebastien Vievard}
 \author[b]{Kyohoon Ahn}
-\author[b]{Nour Skaf}
-\author[d]{Peter Tuthill}
+\author[b,f,g]{Nour Skaf}
+\author[e]{Peter Tuthill}
 \affil[a]{Institute for Astronomy, University of Hawai'i,  640 N. Aohoku Pl., Hilo, HI 96720, USA}
 \affil[b]{National Observatory of Japan, Subaru Telescope, 650 N. Aohoku Pl., Hilo, HI 96720, USA}
 \affil[c]{Steward Observatory, University of Arizona, 933 N. Cherry Ave., Tucson, AZ 85721, USA}
-\affil[d]{Sydney Institute for Astronomy, School of Physics, Physics Rd., University of Sydney, NSW 2006, Australia}
+\affil[d]{Astrobiology Center, NINS, 2-21-1 Osawa, Mitaka, Tokyo 181-8588, Japan}
+\affil[e]{Sydney Institute for Astronomy, University of Sydney, Physics Rd., NSW 2006, Australia}
+\affil[f]{LESIA, Observatoire de Paris, Univ.~PSL, CNRS, Sorbonne Univ., Univ.~de Paris, 5 pl. Jules Janssen, 92195 Meudon, France}
+\affil[g]{Department of Physics and Astronomy, University College London, London, United Kingdom}
 
 \authorinfo{Further author information: (Send correspondence to M.L.)\\M.L.: E-mail: mdlucas@hawaii.edu}
 
@@ -45,12 +48,12 @@
 %%%%% Abstract %%%%%
 
 \begin{abstract}
-   We describe the design and initial results from a visible-light Lyot coronagraph for SCExAO/VAMPIRES. The coronagraph comprises four hard-edged, partially transmissive focal plane masks with inner working angles of \qtylist{36;55;92;129}{\milliarcsecond}, respectively. The Lyot stop is a reflective, undersized design with a relative throughput of 65.7\%. Our preliminary on-sky contrast is \num{e-2} at \ang{;;0.1} to \num{e-4} at \ang{;;0.75} for all mask sizes. The coronagraph was deployed in early 2022 and has been approved for open use.
+   We describe the design and initial results from a visible-light Lyot coronagraph for SCExAO/VAMPIRES. The coronagraph is comprised of four hard-edged, partially transmissive focal plane masks with inner working angles of \qtylist{36;55;92;129}{\milliarcsecond}, respectively. The Lyot stop is a reflective, undersized design with a relative throughput of 65.7\%. Our preliminary on-sky contrast is \num{e-2} at \ang{;;0.1} to \num{e-4} at \ang{;;0.75} for all mask sizes. The coronagraph was deployed in early 2022 and is available for open use.
 \end{abstract}
 
 %%%%% Keywords %%%%%
 
-\keywords{Coronagraph, Optical, Visible, High-Contrast, Imaging, Exoplanets}
+\keywords{Coronagraph, Optical, High-Contrast Imaging, Exoplanets}
 
 %%%%% Main body %%%%%
 
